<resources>
    <string name="app_name">ToDo App</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="fill_hint">Enter something…</string>
    <string name="deadline">Deadline:</string>
    <string name="importance">Importance</string>
    <string name="low">low</string>
    <string name="medium">no</string>
    <string name="high">high</string>
    <string name="header">My tasks</string>
    <string name="completed">Completed:</string>
    <string name="delete">Delete</string>
</resources>