<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/back_primary">

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:background="?attr/back_primary"
            android:src="@drawable/close"
            android:contentDescription="@string/close">
        </ImageButton>

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:textColor="?attr/color_blue"
            android:layout_marginEnd="12dp"
            android:text="@string/save"
            android:textSize="18sp">
        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/edit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:minHeight="128dp"
            app:cardBackgroundColor="?attr/back_primary"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/close_button"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:background="?attr/back_primary"
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fill_hint"
                android:textColor="?attr/label_primary"
                android:inputType="textMultiLine">
            </EditText>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance"
            android:textColor="?attr/label_primary"
            app:layout_constraintStart_toStartOf="@id/edit_card"
            app:layout_constraintTop_toBottomOf="@id/edit_card"/>

        <TextView
            android:id="@+id/importance_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="?attr/label_tertiary"
            app:layout_constraintStart_toStartOf="@id/importance"
            app:layout_constraintTop_toBottomOf="@id/importance"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/deadline"
            android:textColor="?attr/label_primary"
            app:layout_constraintTop_toBottomOf="@id/importance_type"
            app:layout_constraintStart_toStartOf="parent">
        </androidx.appcompat.widget.SwitchCompat>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="?attr/label_tertiary"
            app:layout_constraintStart_toStartOf="@id/importance"
            app:layout_constraintTop_toBottomOf="@id/deadline"/>

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="?attr/color_red"
            app:layout_constraintStart_toEndOf="@id/delete_button"
            app:layout_constraintTop_toTopOf="@id/delete_button"/>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/delete"
            android:layout_marginTop="6dp"
            android:background="?attr/back_primary"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/importance"
            app:tint="?attr/color_red">
        </ImageButton>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>